# far2l

./: CMakeLists.txt  README.md
WinPort/src/Backend/: CMakeLists.txt  ConsoleBidi.cpp  ConsoleBidi.h
WinPort/src/Backend/SDL/: CMakeLists.txt  SDLConsoleRendererImpl.hpp  SDLMain.cpp
WinPort/src/Backend/WX/: CMakeLists.txt  Paint.cpp  Paint.h  wxMain.cpp
packaging/suse/: far2l.spec
